[gd_scene load_steps=27 format=3 uid="uid://djt4jaxstqp53"]

[ext_resource type="Script" uid="uid://7v4hvbqgqr1l" path="res://scripts/ui/player_hud.gd" id="1_8qguk"]
[ext_resource type="Texture2D" uid="uid://82bld10iaeel" path="res://assets/sprites/player/hearts.png" id="3_8qguk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b6swc"]
atlas = ExtResource("3_8qguk")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27rlx"]
atlas = ExtResource("3_8qguk")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuvg6"]
atlas = ExtResource("3_8qguk")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emer0"]
atlas = ExtResource("3_8qguk")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfdjh"]
atlas = ExtResource("3_8qguk")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdlig"]
atlas = ExtResource("3_8qguk")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lptj4"]
atlas = ExtResource("3_8qguk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74gae"]
atlas = ExtResource("3_8qguk")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_33vp1"]
atlas = ExtResource("3_8qguk")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo48s"]
atlas = ExtResource("3_8qguk")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwdlq"]
atlas = ExtResource("3_8qguk")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6xly"]
atlas = ExtResource("3_8qguk")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_we3sy"]
atlas = ExtResource("3_8qguk")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_65nxt"]
atlas = ExtResource("3_8qguk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_el1dq"]
atlas = ExtResource("3_8qguk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmc6u"]
atlas = ExtResource("3_8qguk")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e6lo"]
atlas = ExtResource("3_8qguk")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mi7y"]
atlas = ExtResource("3_8qguk")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkwgd"]
atlas = ExtResource("3_8qguk")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5po8"]
atlas = ExtResource("3_8qguk")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yoph"]
atlas = ExtResource("3_8qguk")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmm8d"]
atlas = ExtResource("3_8qguk")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0png"]
atlas = ExtResource("3_8qguk")
region = Rect2(128, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_27rlx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6swc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27rlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuvg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emer0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfdjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdlig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lptj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74gae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33vp1")
}],
"loop": false,
"name": &"gain_health",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo48s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwdlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6xly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we3sy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65nxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_el1dq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmc6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e6lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mi7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkwgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5po8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yoph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmm8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0png")
}],
"loop": false,
"name": &"lose_health",
"speed": 20.0
}]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("1_8qguk")

[node name="HealthBar" type="Node" parent="."]

[node name="Heart1" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1856, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart2" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1784, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart3" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1712, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart4" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1640, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart5" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1568, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart6" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1496, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart7" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1424, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart8" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1352, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"

[node name="Heart9" type="AnimatedSprite2D" parent="HealthBar"]
position = Vector2(1280, 64)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_27rlx")
animation = &"lose_health"
